Adding a reload icon to weapon in combat tab. Reloads and logs if there missing ammo

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -351,6 +351,7 @@ swnr:
     xp: XP
     delete-item: Delete Item
     edit-item: Edit Item
+    reload-item: Reload Item
     ask: Ask
     description: "Description:"
     ammoType: Ammo Type
