--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -373,6 +373,8 @@ swnr:
     useRollNPCHDHint: When creating a npc token, if the HP or Hit Dice (HD) has not been rolled, it will roll d8 HD for health automatically.
     useHomebrewLuckSave: Use Homebrew Luck saves?
     useHomebrewLuckSaveHint: Uses 16 - Level for the save, no modifiers, just pure luck
+    addShockMessage: Add Shock Damage Message?
+    addShockMessageHint: When attacking this adds another seperate message log for shock damage. Useful for modules.
   chat:
     dicepool: Dice Pool
     difficulty: Difficulty
