quick skill text

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -442,6 +442,9 @@ swnr:
     save-changes: "Save Changes"
     tweak:
       adv-init: Initiative Advantage (roll 2x keep higher)
+      quick-skill-1: Quick Skill 1
+      quick-skill-2: Quick Skill 2
+      quick-skill-3: Quick Skill 3
 
   roll:
     skillNeeded: Hey! You need to pick a skill!
