--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -404,11 +404,14 @@ swnr:
       weapons: Weapons
       defense: Defense
       fittings: Fittings
+    tweaks: Tweaks
   settings:
+    useRollNPCHD: Use NPC HD on token create?
+    useRollNPCHDHint: When creating a npc token, if the HP or Hit Dice (HD) has not been rolled, it will roll d8 HD for health automatically.
     useHomebrewLuckSave: Use Homebrew Luck saves?
     useHomebrewLuckSaveHint: Uses 16 - Level for the save, no modifiers, just pure luck
     addShockMessage: Add Shock Damage Message?
-    addShockMessageHint: When attacking this adds another seperate message log for shock damage. Useful for modules.
+    addShockMessageHint: When attacking this adds another roll for shock damage in the attack chat message.
   chat:
     dicepool: Dice Pool
     difficulty: Difficulty
@@ -471,10 +474,18 @@ swnr:
     attackRoll: "{actorName} attacking with {weaponName}?"
     add-skills: Add Skills
     add-bulk-skills: Add Bulk Skills to {actor}
+    tweak-char: "Tweaking options for {actorName}"
+    save-changes: "Save Changes"
+    tweak:
+      adv-init: Initiative Advantage (roll 2x and keep higher)
+      quick-skill-1: Quick Skill 1
+      quick-skill-2: Quick Skill 2
+      quick-skill-3: Quick Skill 3
     hp:
       text: Select the base dice per level you want to roll (with con bonus added).
       revised: Revised Expert/Psychic d6
       revised-war: Revised Warrior/Partial Warrior d6+2
+      codex-mage: Arcanist / Magister d6-1
       classic-psy: Classic Psychic d4
       classic-exp: Classic Expert d6
       classic-war: Classic Warrior d8
