--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -371,6 +371,8 @@
     vs: vs
     rollables: Rollables
     hit-dice: Hit Dice
+    cyberware:
+      disabled: Disabled
     ship:
       life-support-days: Life Support Days
       fuel: Fuel
