--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -384,8 +384,14 @@
       cargo: Cargo
       operating-cost: Operating Cost
       maintenance-cost: Maintenance Cost
+      amount-owed: Amount Owed
+      credit-pool: Credit Pool
+      payment-amount: Payment Amount
+      payment-months: Months Between Payments
+      maintenance-months: Months Between Maintenance
+      last-payment: Last Payment Date (YYYY/MM/DD)
       cost: Cost
-      last-maintenance: Last Maintenance
+      last-maintenance: Last Maintenance (YYYY/MM/DD)
       crew: Crew (min/cur/max)
       shipHullType:
         strikeFighter: Strike Fighter 
