--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -392,6 +392,9 @@
       last-payment: Last Payment Date (YYYY/MM/DD)
       cost: Cost
       last-maintenance: Last Maintenance (YYYY/MM/DD)
+      calc-cost: Calculate the cost for the ship (using hull and items)
+      make-payment: Make a payment (using ship's pool)
+      pay-maintenance: Pay maintenance (using ship's pool)
       crew: Crew (min/cur/max)
       shipHullType:
         strikeFighter: Strike Fighter 
@@ -434,7 +437,6 @@
       crisis: Crisis
       system-failure: System Failure(s)
       refuel: Refuel
-      calc-cost: Calculate the cost for the ship (using hull and items)
       costMultiplier: Scale cost by ship class (10x,25x,100x)
       powerMultiplier: Scale power by ship class (2x,3x,4x)
       massMultiplier: Scale mass by ship class (2x,3x,4x)
@@ -608,7 +610,7 @@
     unarmed: Unarmed
     saving:
       failure: "{actor} failed their saving throw."
-      success: "{actor} succeded at their saving throw."
+      success: "{actor} succeeded at their saving throw."
   migration:
     start: >-
       SWNR: Starting migration from {oldVersion} to {newVersion}. Please let
