buttons working without a dialog

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -385,7 +385,7 @@
       operating-cost: Operating Cost
       maintenance-cost: Maintenance Cost
       amount-owed: Amount Owed
-      credit-pool: Credit Pool
+      credit-pool: Ship's Credit Pool
       payment-amount: Payment Amount
       payment-months: Months Between Payments
       maintenance-months: Months Between Maintenance
