calc cyberware strain and show sep from entered perm. strain

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -336,7 +336,7 @@
     armor-class: Armor Class
     armor: Armor
     hp: HP
-    permanent-strain: Permanent strain
+    permanent-strain: Perm. Strain
     attack-bonus: Attack Bonus
     system-strain: System Strain
     tabs:
