clean up on icons and sorting powers to show as a list

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -351,6 +351,7 @@
       powers: Powers
       combat: Combat
     xp: XP
+    power: Power
     delete-item: Delete Item
     edit-item: Edit Item
     reload-item: Reload Item
