Reorg items in char sheet some

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -545,6 +545,7 @@
     bundledCount: Bundle Count
     cost: Cost
     encumbrance: Encumbrance
+    enc: Enc.
     quality:
       stock: Stock
       label: Quality
