resource list as array seems to be wokring

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -352,6 +352,7 @@
       combat: Combat
     xp: XP
     power: Power
+    resources: Resources
     delete-item: Delete Item
     edit-item: Edit Item
     reload-item: Reload Item
