--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -475,9 +475,9 @@
       crisis: Crisis
       system-failure: System Failure(s)
       refuel: Refuel
-      costMultiplier: Scale cost by ship class (10x,25x,100x)
-      powerMultiplier: Scale power by ship class (2x,3x,4x)
-      massMultiplier: Scale mass by ship class (2x,3x,4x)
+      costMultiplier: Scale cost by class
+      powerMultiplier: Scale power by class
+      massMultiplier: Scale mass by class
       station:
         captain: Captain
         gunnery: Gunnery
