small fixes. img for item, show qty for items, and fix vehicle power/mass

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -567,6 +567,7 @@
     cost: Cost
     encumbrance: Encumbrance
     enc: Enc.
+    qty: Qty
     quality:
       stock: Stock
       label: Quality
