foci level, add foci button, small fix on repair chat msg

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -564,6 +564,7 @@
   foci:
     level2: "Level 2:"
     level1: "Level 1:"
+    level: Current Level
   item:
     bundledCount: Bundle Count
     cost: Cost
