working on att/def roll for asset attack search

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -456,6 +456,7 @@
       attack-roll: Attack Hit Roll
       counter-roll: Counter Hit Roll
       damage: Damage
+      attack: Attack
     ship:
       life-support-days: Life Support Days
       fuel: Fuel
