--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -337,7 +337,7 @@
     armor: Armor
     hp: HP
     permanent-strain: Perm. Strain
-    f: Attack Bonus
+    attack-bonus: Attack Bonus
     system-strain: System Strain
     tabs:
       biography: Biography
