Creating asset button and fixes to attack roll for v9

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -356,6 +356,7 @@
     delete-item: Delete Item
     edit-item: Edit Item
     reload-item: Reload Item
+    add-item: Add Item
     break-item: Break/Disable Item
     jury-rig: Jury-Rig Item
     destroy-item: Destroy Item
