rating up and set homeworld

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -473,6 +473,7 @@
       income: Income
       unusable: Unusable
       turn: Start Turn
+      setHomeworld: Set the faction homeworld to {name}?
     ship:
       life-support-days: Life Support Days
       fuel: Fuel
