Faction tag add and working on del

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -456,6 +456,8 @@
       assets-tab: Assets
       desc-tab: Description
       tags-tab: Tags
+      add-tag: Add Tag
+      remove-tag: Remove Tag
       active: Active Faction
       attack-roll: Attack Hit Roll
       counter-roll: Counter Hit Roll
