Show special attack text

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -447,6 +447,7 @@
       attackSource: Source
       attackTarget: Target
       attackDamage: Damage
+      attackSpecial: Special Attack Note
       counter: Counter
       note: Note
       turnRoll: On Turn Roll
@@ -476,7 +477,7 @@
       unusable: Unusable
       turn: Start Turn
       setHomeworld: Set the faction homeworld to {name}?
-      abandonGoal: Abadon current goal {name}? Will lose income and no actions this turn/
+      abandonGoal: Abandon current goal {name}? Will lose income and no actions this turn/
     ship:
       life-support-days: Life Support Days
       fuel: Fuel
