--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -458,8 +458,11 @@
       assets-tab: Assets
       desc-tab: Description
       tags-tab: Tags
+      log-tab: Log
       add-tag: Add Tag
       remove-tag: Remove Tag
+      remove-log: Remove Log Entry
+      remove-log-all: Remove All Log Entries
       active: Active Faction
       attack-roll: Attack Hit Roll
       counter-roll: Counter Hit Roll
