--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -586,6 +586,7 @@
     statApply: Apply stats to {name}
     totalModifier: Total Modifier
     statRoll: Roll stats
+    savemoddesc: (Positive makes save easier, negative harder)
     spike:
       fail3: >-
         Catastrophic dimensional energy incursion. 
