favorites working and small UI changes

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -650,6 +650,7 @@
     locationStowed: Stowed
     locationReadied: Readied
     range: Range
+    favorite: Favorite
   weapon:
     shock:
       label: Shock Damage
