--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -328,6 +328,7 @@
     bonus: Bonus
     total: Total
     modifier: Modifier
+    temp: Temp
     mod: Mod
     saves:
       luck: Luck
@@ -582,6 +583,8 @@
     useHomebrewLuckSaveHint: Uses 16 - Level for the save, no modifiers, just pure luck
     addShockMessage: Add Shock Damage Message?
     addShockMessageHint: When attacking this adds another roll for shock damage in the attack chat message.
+    showTempAttrMod: Show Temporary Attribute Total Modifiers?
+    showTempAttrModHint: On the character sidebar show the temporary modifiers to an attribute (e.g. attribute damage)
   chat:
     dicepool: Dice Pool
     difficulty: Difficulty
