--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -778,4 +778,4 @@
   deleteTitle: Delete {name}?
   deleteCrew: Do you want to remove {name} from the crew?
   deletePilot: Do you want to remove {name} as the pilot?
-  deleteContent: Are you sure you want to delete {name} from the actor {actor}?
+  deleteContent: Are you sure you want to delete {name} from the actor {actor}? (hold shift to skip confirm dialog)
