wip on item search

--- a/src/lang/en.yml
+++ b/src/lang/en.yml
@@ -373,6 +373,7 @@
     edit-item: Edit Item
     reload-item: Reload Item
     add-item: Add Item
+    search-item: Search to Add Item
     break-item: Break/Disable Item
     jury-rig: Jury-Rig Item
     fix-item: Fix Item
